--- a/.gitignore
+++ b/.gitignore
@@ -94,8 +94,7 @@ DerivedData/
 !default.perspectivev3
 
 .DS_Store
-.idea/codeStyles/codeStyleConfig.xml
-.idea/markdown-navigator.xml
-.idea/workspace.xml
+.idea/*
+
 Podfile.lock
 Pods/*
